exports[`invalid(1): {\"name\": \"foo\", \"funding\": \"https://example.com\"} 1`] = `

[Input]
Options:
- fields:
    - 'funding'

Code:
  1 | {"name": "foo", "funding": "https://example.com"}

`;

exports[`invalid(1): {\"name\": \"foo\", \"funding\": \"https://example.com\"} 2`] = `

Message:
> 1 | {"name": "foo", "funding": "https://example.com"}
    |                 ^^^^^^^^^ The \`funding\` field is not allowed.

Suggestion 1/1: Remove the field.:
  1 | {"name": "foo"}

`;

exports[`invalid(10): {\n\t\"name\": \"foo\",\n\t\"funding\": \"x\"\n} 1`] = `

[Input]
Options:
- fields:
    - 'funding'

Code:
  1 | {
  2 | 	"name": "foo",
  3 | 	"funding": "x"
  4 | }

`;

exports[`invalid(10): {\n\t\"name\": \"foo\",\n\t\"funding\": \"x\"\n} 2`] = `

Message:
  1 | {
  2 | 	"name": "foo",
> 3 | 	"funding": "x"
    | 	^^^^^^^^^ The \`funding\` field is not allowed.
  4 | }

Suggestion 1/1: Remove the field.:
  1 | {
  2 | 	"name": "foo"
  3 | }

`;

exports[`invalid(2): {\"name\": \"foo\", \"funding\": \"https://example.com\"} 1`] = `

[Input]
Options:
- fields:
    - field: 'funding'
      message: 'Funding is not allowed in this project.'

Code:
  1 | {"name": "foo", "funding": "https://example.com"}

`;

exports[`invalid(2): {\"name\": \"foo\", \"funding\": \"https://example.com\"} 2`] = `

Message:
> 1 | {"name": "foo", "funding": "https://example.com"}
    |                 ^^^^^^^^^ Funding is not allowed in this project.

Suggestion 1/1: Remove the field.:
  1 | {"name": "foo"}

`;

exports[`invalid(3): {\"name\": \"foo\", \"funding\": \"https://example.com\"} 1`] = `

[Input]
Options:
- fields:
    - field: 'funding'

Code:
  1 | {"name": "foo", "funding": "https://example.com"}

`;

exports[`invalid(3): {\"name\": \"foo\", \"funding\": \"https://example.com\"} 2`] = `

Message:
> 1 | {"name": "foo", "funding": "https://example.com"}
    |                 ^^^^^^^^^ The \`funding\` field is not allowed.

Suggestion 1/1: Remove the field.:
  1 | {"name": "foo"}

`;

exports[`invalid(4): {\"name\": \"foo\", \"funding\": \"https://example.com\"} 1`] = `

[Input]
Options:
- fields:
    - field: 'funding'
      message: ''

Code:
  1 | {"name": "foo", "funding": "https://example.com"}

`;

exports[`invalid(4): {\"name\": \"foo\", \"funding\": \"https://example.com\"} 2`] = `

Message:
> 1 | {"name": "foo", "funding": "https://example.com"}
    |                 ^^^^^^^^^ The \`funding\` field is not allowed.

Suggestion 1/1: Remove the field.:
  1 | {"name": "foo"}

`;

exports[`invalid(5): {\"name\": \"foo\", \"funding\": \"x\", \"browser\": \"index.js\"} 1`] = `

[Input]
Options:
- fields:
    - 'funding'
    - 'browser'

Code:
  1 | {"name": "foo", "funding": "x", "browser": "index.js"}

`;

exports[`invalid(5): {\"name\": \"foo\", \"funding\": \"x\", \"browser\": \"index.js\"} 2`] = `

Message:
> 1 | {"name": "foo", "funding": "x", "browser": "index.js"}
    |                 ^^^^^^^^^ The \`funding\` field is not allowed.

Suggestion 1/1: Remove the field.:
  1 | {"name": "foo", "browser": "index.js"}

`;

exports[`invalid(5): {\"name\": \"foo\", \"funding\": \"x\", \"browser\": \"index.js\"} 3`] = `

Message:
> 1 | {"name": "foo", "funding": "x", "browser": "index.js"}
    |                                 ^^^^^^^^^ The \`browser\` field is not allowed.

Suggestion 1/1: Remove the field.:
  1 | {"name": "foo", "funding": "x"}

`;

exports[`invalid(6): {\"funding\": \"x\", \"name\": \"foo\"} 1`] = `

[Input]
Options:
- fields:
    - 'funding'

Code:
  1 | {"funding": "x", "name": "foo"}

`;

exports[`invalid(6): {\"funding\": \"x\", \"name\": \"foo\"} 2`] = `

Message:
> 1 | {"funding": "x", "name": "foo"}
    |  ^^^^^^^^^ The \`funding\` field is not allowed.

Suggestion 1/1: Remove the field.:
  1 | {"name": "foo"}

`;

exports[`invalid(7): {\"name\": \"foo\", \"funding\": \"x\"} 1`] = `

[Input]
Options:
- fields:
    - 'funding'

Code:
  1 | {"name": "foo", "funding": "x"}

`;

exports[`invalid(7): {\"name\": \"foo\", \"funding\": \"x\"} 2`] = `

Message:
> 1 | {"name": "foo", "funding": "x"}
    |                 ^^^^^^^^^ The \`funding\` field is not allowed.

Suggestion 1/1: Remove the field.:
  1 | {"name": "foo"}

`;

exports[`invalid(8): {\"funding\": \"x\"} 1`] = `

[Input]
Options:
- fields:
    - 'funding'

Code:
  1 | {"funding": "x"}

`;

exports[`invalid(8): {\"funding\": \"x\"} 2`] = `

Message:
> 1 | {"funding": "x"}
    |  ^^^^^^^^^ The \`funding\` field is not allowed.

Suggestion 1/1: Remove the field.:
  1 | {}

`;

exports[`invalid(9): {\n\t\"funding\": \"x\",\n\t\"name\": \"foo\"\n} 1`] = `

[Input]
Options:
- fields:
    - 'funding'

Code:
  1 | {
  2 | 	"funding": "x",
  3 | 	"name": "foo"
  4 | }

`;

exports[`invalid(9): {\n\t\"funding\": \"x\",\n\t\"name\": \"foo\"\n} 2`] = `

Message:
  1 | {
> 2 | 	"funding": "x",
    | 	^^^^^^^^^ The \`funding\` field is not allowed.
  3 | 	"name": "foo"
  4 | }

Suggestion 1/1: Remove the field.:
  1 | {
  2 | 	"name": "foo"
  3 | }

`;
